Can now load and save games! And preloader is nicer.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="src/engine/gameLoop.js"></script>
   <script src="src/assets.js"></script>
   <script src="src/scenes/main.js"></script>
+  <script src="src/engine/localStorage.js"></script>
 </head>
 
 <body>
