Migration to browserify almost complete - simplified modules.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <html>
 
 <head>
-  <script src="src/engine/core.js"></script>
-  <script src="src/engine/entities.js"></script>
-  <script src="src/engine/scenes.js"></script>
-  <script src="src/engine/loader.js"></script>
-  <script src="src/engine/shapes.js"></script>
-  <script src="src/engine/gameLoop.js"></script>
-  <script src="src/assets.js"></script>
-  <script src="src/scenes/main.js"></script>
-  <script src="src/engine/localStorage.js"></script>
+  <script src="build/ox.js"></script>
+  <!--  <script src="src/main.js"></script>-->
+  <!--  <script src="src/assets.js"></script>-->
+  <!--  <script src="src/scenes/main.js"></script>-->
 </head>
 
 <body>
