--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-  <script src="build/ox.js"></script>
+    <script src="build/ox.js"></script>
 </head>
 
 <body>
-  <canvas id="canvas"></canvas>
+    <canvas id="canvas" height="329px" width="552px"></canvas>
 </body>
 
 </html>
